grammar.js
    compilation_unit: $ => seq(
      repeat($.extern_alias_directive),
      repeat($.using_directive),
      repeat($.global_attribute_list),
      choice(
        seq(repeat($.global_statement), repeat($._namespace_member_declaration)),
        $.file_scoped_namespace_declaration
      )
    ),

    global_statement: $ => $._statement,

    _declaration: $ => choice(
      $.class_declaration,
      $.constructor_declaration,
      $.conversion_operator_declaration,
      $.delegate_declaration,
      $.destructor_declaration,
      $.enum_declaration,
      $.event_declaration,
      $.event_field_declaration,
      $.field_declaration,
      $.indexer_declaration,
      $.interface_declaration,
      $.method_declaration,
      $.namespace_declaration,
      $.operator_declaration,
      $.property_declaration,
      $.record_declaration,
      $.record_struct_declaration,
      $.struct_declaration,
      $.using_directive,
    ),

    _namespace_member_declaration: $ => choice(
      $.namespace_declaration,
      $._type_declaration
    ),

    variable_declaration: $ => seq(
      field('type', $._type),
      commaSep1($.variable_declarator)
    ),

    variable_declarator: $ => seq(
      choice(field('name', $.identifier), $.tuple_pattern),
      optional($.bracketed_argument_list),
      optional($.equals_value_clause)
    ),

    equals_value_clause: $ => seq('=', $._expression),

    parameter_list: $ => seq(
      '(',
      optional($._formal_parameter_list),
      ')'
    ),

    _formal_parameter_list: $ => commaSep1(choice(
      $.parameter,
      $._parameter_array
    )),

    block: $ => seq('{', repeat($._statement), '}'),

    _function_body: $ => choice(
      field('body', $.block),
      seq(field('body', $.arrow_expression_clause), ';'),
      ';' // Only applies to interfaces
    ),

    method_declaration: $ => seq(
      repeat($.attribute_list),
      repeat($.modifier),
      field('type', $._type),
      optional($.explicit_interface_specifier),
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter_list)),
      field('parameters', $.parameter_list),
      repeat($.type_parameter_constraints_clause),
      $._function_body,
    ),

    class_declaration: $ => seq(
      repeat($.attribute_list),
      repeat($.modifier),
      'class',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter_list)),
      field('parameters', optional($.parameter_list)),
      field('bases', optional($.base_list)),
      repeat($.type_parameter_constraints_clause),
      field('body', $.declaration_list),
      $._opt_semi,
    ),

    declaration_list: $ => seq(
      '{',
      repeat($._declaration),
      '}'
    ),

    _type: $ => choice(
      $.implicit_type,
      $.array_type,
      $._type_name,
      $.nullable_type,
      $.pointer_type,
      $.function_pointer_type,
      $.predefined_type,
      $.tuple_type,
      $.ref_type,
      $.scoped_type,
    ),

    implicit_type: $ => prec.dynamic(1, // Higher precedence than `_type_name`
      'var'),

    predefined_type: $ => token(choice(
      'bool',
      'byte',
      'char',
      'decimal',
      'double',
      'float',
      'int',
      'long',
      'object',
      'sbyte',
      'short',
      'string',
      'uint',
      'ulong',
      'ushort',
      'nint',
      'nuint',
      'void'
    )),

    _statement: $ => choice(
      $.block,
      $.break_statement,
      $.checked_statement,
      $.continue_statement,
      $.do_statement,
      $.empty_statement,
      $.expression_statement,
      $.fixed_statement,
      $.for_each_statement,
      $.for_statement,
      $.goto_statement,
      $.if_statement,
      $.labeled_statement,
      $.local_declaration_statement,
      $.local_function_statement,
      $.lock_statement,
      $.return_statement,
      $.switch_statement,
      $.throw_statement,
      $.try_statement,
      $.unsafe_statement,
      $.using_statement,
      $.while_statement,
      $.yield_statement,
    ),

    local_declaration_statement: $ => seq(
      optional('await'),
      optional('using'),
      repeat($.modifier),
      $.variable_declaration,
      ';'
    ),

    parenthesized_expression: $ => seq('(', $._non_lvalue_expression, ')'),

    prefix_unary_expression: $ => prec.right(PREC.UNARY, choice(
      ...[
        '!',
        '&',
        // '*', Handled separately in _pointer_indirection_expression
        '+',
        '++',
        '-',
        '--',
        '^',
        '~'
      ].map(operator => seq(operator, $._expression)))),

    _expression: $ => choice(
      $._non_lvalue_expression,
      $._lvalue_expression,
    ),

    _non_lvalue_expression: $ => choice(
      $.anonymous_method_expression,
      $.anonymous_object_creation_expression,
      $.array_creation_expression,
      $.as_expression,
      $.base_expression,
      $.binary_expression,
      $.cast_expression,
      $.checked_expression,
      $.conditional_access_expression,
      $.conditional_expression,
      $.default_expression,
      $.implicit_array_creation_expression,
      $.implicit_object_creation_expression,
      $.implicit_stack_alloc_array_creation_expression,
      $.initializer_expression,
      $.interpolated_string_expression,
      $.is_expression,
      $.is_pattern_expression,
      $.lambda_expression,
      $.make_ref_expression,
      // $.member_binding_expression, // Not needed as handled directly in $.conditional_access_expression
      $.query_expression,
      $.range_expression,
      $.ref_expression,
      $.ref_type_expression,
      $.ref_value_expression,
      $.size_of_expression,
      $.stack_alloc_array_creation_expression,
      $.switch_expression,
      $.throw_expression,
      $.type_of_expression,
      $.with_expression,

      $._literal,
      $._expression_statement_expression,
    ),

    // Covers error CS0131: The left-hand side of an assignment must be a variable, property or indexer
    binary_expression: $ => choice(
      ...[
        ['&&', PREC.LOGAND], // logical_and_expression
        ['||', PREC.LOGOR], // logical_or_expression
        ['>>', PREC.SHIFT], // right_shift_expression
        ['>>>', PREC.SHIFT], // right_shift_expression
        ['<<', PREC.SHIFT], // left_shift_expression
        ['&', PREC.AND],  // bitwise_and_expression
        ['^', PREC.XOR], // exclusive_or_expression
        ['|', PREC.OR], // bitwise_or_expression
        ['+', PREC.ADD], // add_expression
        ['-', PREC.ADD], // subtract_expression
        ['*', PREC.MULT], // multiply_expression
        ['/', PREC.MULT], // divide_expression
        ['%', PREC.MULT], // modulo_expression
        ['<', PREC.REL], // less_than_expression
        ['<=', PREC.REL], // less_than_or_equal_expression
        ['==', PREC.EQUAL], // equals_expression
        ['!=', PREC.EQUAL], // not_equals_expression
        ['>=', PREC.REL], // greater_than_or_equal_expression
        ['>', PREC.REL] //  greater_than_expression
      ].map(([operator, precedence]) =>
        prec.left(precedence, prec.dynamic(3, seq(  // higher than cast
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        )))
      ),
      prec.right(PREC.COALESCING, seq(
        field('left', $._expression),
        field('operator', '??'), // coalesce_expression
        field('right', $._expression)
      ))
    ),

    _identifier_token: $ => token(seq(optional('@'), /[\p{L}\p{Nl}_][\p{L}\p{Nl}\p{Nd}\p{Pc}\p{Cf}\p{Mn}\p{Mc}]*/)),
    identifier: $ => choice($._identifier_token, $._contextual_keywords),

    boolean_literal: $ => choice(
      'true',
      'false'
    ),

    integer_literal: $ => token(seq(
      choice(
        decimalDigitSequence, // Decimal
        (/0[xX][0-9a-fA-F_]*[0-9a-fA-F]+/), // Hex
        (/0[bB][01_]*[01]+/) // Binary
      ),
      optional(/u|U|l|L|ul|UL|uL|Ul|lu|LU|Lu|lU/)
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_literal_fragment,
        $.escape_sequence
      )),
      '"',
      optional($.string_literal_encoding)
    ),

    string_literal_fragment: $ => token.immediate(prec(1, /[^"\\\n]+/)),

    verbatim_string_literal: $ => token(seq(
      '@"',
      repeat(choice(
        /[^"]/,
        '""',
      )),
      '"',
      optional(stringEncoding)
    )),

    comment: $ => token(choice(
      seq('//', /[^\n\r]*/),
      seq(
        '/*',
        /[^*]*\*+([^/*][^*]*\*+)*/,
        '/'
      )
    )),

    // Custom non-Roslyn additions beyond this point that will not sync up with grammar.txt

    // Contextual keywords - keywords that can also be identifiers...
    // The below list contains all contextual keywords listed in https://learn.microsoft.com/en-us/dotnet/csharp/language-reference/keywords/#contextual-keywords
    // Tree-sitter performs context-aware lexing, so some of these are not going to be needed and can be commented out. The list should be kept for completeness.
    // Currently keywords are commented out based on whether they were in the grammar already or not.
    _contextual_keywords: $ => choice(
      // 'add',
      'alias',
      // 'and',
      // 'args',
      'ascending',
      // 'async',
      // 'await',
      'by',
      'descending',
      // 'dynamic',
      'equals',
      'file',
      'from',
      // 'get',
      'global',
      'group',
      // 'init',
      'into',
      'join',
      'let',
      // 'managed',
      // 'nameof',
      // 'nint',
      // 'not',
      'notnull',
      // 'nuint',
      'on',
      // 'or',
      'orderby',
      // 'partial',
      // 'record',
      // 'remove',
      // 'required',
      'scoped',
      'select',
      // 'set',
      'unmanaged',
      // 'value',
      'var',
      'when',
      'where',
      // 'with',
      'yield',
    ),

    // Preprocessor

    nullable_directive: $ => seq(
      'nullable',
      choice('disable', 'enable', 'restore'),
      optional(choice('annotations', 'warnings'))
    ),

    define_directive: $ => seq('define', $.identifier),
    undef_directive: $ => seq('undef', $.identifier),
    if_directive: $ => seq('if', $._preproc_expression),
    else_directive: $ => 'else',
    elif_directive: $ => seq('elif', $._preproc_expression),
    endif_directive: $ => 'endif',
    region_directive: $ => seq('region', optional($.preproc_message)),
    endregion_directive: $ => seq('endregion', optional($.preproc_message)),
    error_directive: $ => seq('error', $.preproc_message),
    warning_directive: $ => seq('warning', $.preproc_message),
    line_directive: $ => seq('line',
      choice(
        'default',
        'hidden',
        seq($.preproc_integer_literal, optional($.preproc_string_literal)),
        seq(
          '(', $.preproc_integer_literal, ',', $.preproc_integer_literal, ')',
          '-',
          '(', $.preproc_integer_literal, ',', $.preproc_integer_literal, ')',
          optional($.preproc_integer_literal), $.preproc_string_literal),
      )
    ),
    pragma_directive: $ => seq('pragma',
      choice(
        seq('warning',
          choice('disable', 'restore'),
          commaSep(
            choice(
              $.identifier,
              alias($.preproc_integer_literal, $.integer_literal),
            ))),
        seq('checksum', $.preproc_string_literal, $.preproc_string_literal, $.preproc_string_literal)
      )
    ),
    reference_directive: $ => seq('r', $.preproc_string_literal),
    load_directive: $ => seq('load', $.preproc_string_literal),
    shebang_directive: $ => seq('!', /[^\n\r]*/),

    preproc_message: $ => /[^\n\r]+/,
    preproc_integer_literal: $ => /[0-9]+/,
    preproc_string_literal: $ => /"[^"]*"/,

    _preproc_expression: $ => choice(
      $.identifier,
      $.boolean_literal,
      alias($.preproc_integer_literal, $.integer_literal),
      alias($.preproc_string_literal, $.verbatim_string_literal),
      alias($.preproc_unary_expression, $.prefix_unary_expression),
      alias($.preproc_binary_expression, $.binary_expression),
      alias($.preproc_parenthesized_expression, $.parenthesized_expression)
    ),
